--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Arctic regions'
 - !lcc 'G'
+- GITenberg
 title: True Tales of Arctic Heroism in the New World
 url: http://www.gutenberg.org/ebooks/39108
